--- a/distribution/scripts/cloudformation/templates/apim_micro_gw_perf_test_cfn.yaml
+++ b/distribution/scripts/cloudformation/templates/apim_micro_gw_perf_test_cfn.yaml
@@ -41,12 +41,12 @@
   # WSO2APIManagerDBInstanceClass:
   #   Description: WSO2 API Manager database instance class for RDS Instance
   #   Type: String
-  # MasterUsername:
-  #   Description: Username of RDS DB Instance
-  #   Type: String
-  # MasterUserPassword:
-  #   Description: Password of RDS DB Instance
-  #   Type: String
+  MasterUsername:
+    Description: Username of RDS DB Instance
+    Type: String
+  MasterUserPassword:
+    Description: Password of RDS DB Instance
+    Type: String
 {%- endblock %}
 {% block resources -%}
   #Configure second private subnet
@@ -108,7 +108,7 @@
 {% call ec2instance('WSO2APIManagerInstance', 'wso2am', '!Ref WSO2APIManagerInstanceType',
   files=[{'name': 'wso2am-micro-gw.zip', 'ref': 'WSO2APIMicroGWDistributionName'}, {'name': 'jdk-8-linux-x64.tar.gz', 'ref': 'OracleJDKDistributionName'}
   ]) -%}
-/home/ubuntu/setup/setup-apim-micro-gw.sh -j /home/ubuntu/jdk-8-linux-x64.tar.gz -k /home/ubuntu/wso2am-micro-gw.zip -n ${BackendInstance.PrivateIp} -b ubuntu
+/home/ubuntu/setup/setup-apim-micro-gw.sh -j /home/ubuntu/jdk-8-linux-x64.tar.gz -k /home/ubuntu/wso2am-micro-gw.zip -n ${BackendInstance.PrivateIp} -u ${MasterUsername} -p ${MasterUserPassword} -b ubuntu
 {%- endcall %}
 # Backend
 {% call ec2instance('BackendInstance', 'backend', '!Ref BackendInstanceType',
